tenzir/integration/data/reference/pipelines_local/test_parse_operators/step_13.ref
error: the file `/foo.json` does not exist
 --> <input>:1:13
  |
1 | from file:///foo.json read json
  |             ^^^^^^^^^ 
  |